# obsidian-vault-RAG

./: .env.example  .gitignore  LICENSE  README.md  ask.py  config.py  environment.yml  ingest.py  pyproject.toml  settings.toml
experiments/: metrics.py  run_eval.py
profiles/: code.json  math.json  reflection.json
scripts/: ask.py  build_index.py
src/rag/: debug.py  index.py  loaders.py  pipeline.py  profiles.py  prompting.py  retrieval.py  settings.py
src/rag/adapters/chunking/: __init__.py  fixed.py
src/rag/adapters/context_building/: simple_context_builder.py
src/rag/adapters/embedding/: dummy_embedder.py  openai_embedder.py  sqlite_cache.py
src/rag/adapters/generation/: openai_chat.py
src/rag/adapters/ingestion/: filesystem.py
src/rag/adapters/ingestion/loaders/: obsidian_markdown_loader.py  text_loader.py
src/rag/adapters/retrieval/: vector_retriever.py
src/rag/adapters/vectorstores/: in_memory_store.py  jsonl_store.py
src/rag/app/: cli.py  container.py  pipeline.py
src/rag/domain/: errors.py  models.py  schema.py
src/rag/eval/: evaluate_retrieval.py
src/rag/ports/: __init__.py  chunker.py  context_builder.py  embedder.py  generator.py  ingestor.py  logger.py  reranker.py  retriever.py  vector_store.py
src/rag/utils/: debug.py  json_sanitize.py  parsing.py
tests/: eval_set.jsonl
